Fix null reference on UserHandler's FollowService dependency, added delete user, test follows, suggestions and deletes
